my_embeddings.pyを追加

--- a/.env.sample
+++ b/.env.sample
@@ -2,5 +2,8 @@
 AOAI_ENDPOINT=
 AOAI_API_VERSION=
 AOAI_API_KEY=
+# GPT-3.5のデプロイ名を設定
 AOAI_DEPLOYMENT=
-AOAI_35_DEPLOYMENT=
+# GPT-4oのデプロイ名を設定
+AOAI_4o_DEPLOYMENT=
+AOAI_EMB_DEPLOYMENT=
